# decrypt-it

./: .gitignore  Cargo.toml  DecryptIt.doap  Decrypteet.doap  Metamorphosis.doap  README.md  dev.deimoshall.DecryptIt.json  dev.deimoshall.Decrypteet.json  dev.deimoshall.Metamorphosis.json  meson.build  release-steps.md  update_translation.sh
.github/workflows/: check.yml  ci.yml
build-aux/: compile-blueprints.sh
data/: dev.deimoshall.DecryptIt.desktop.in.in  dev.deimoshall.DecryptIt.gschema.xml.in  dev.deimoshall.DecryptIt.metainfo.xml.in.in  dev.deimoshall.DecryptIt.service.in  dev.deimoshall.Decrypteet.desktop.in.in  dev.deimoshall.Decrypteet.gschema.xml.in  dev.deimoshall.Decrypteet.metainfo.xml.in.in  dev.deimoshall.Decrypteet.service.in  dev.deimoshall.Metamorphosis.desktop.in.in  dev.deimoshall.Metamorphosis.gschema.xml.in  dev.deimoshall.Metamorphosis.metainfo.xml.in.in  dev.deimoshall.Metamorphosis.service.in
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/icons/hicolor/: dev.deimoshall.DecryptIt.xcf  dev.deimoshall.Metamorphosis.xcf
po/: POTFILES.in  ar.po  bg.po  cs.po  de.po  decrypteet.pot  es.po  fr.po  hi.po  hr.po  it.po  ka.po  kw.po  metamorphosis.pot  nl.po  oc.po  pt.po  pt_BR.po  ru.po  sv.po  tr.po  zh_cn.po
src/: application.rs  file_chooser.rs  input_file.rs  magick.rs  main.rs  meson.build  ui-blueprint-resources.in  window.blp  window.rs
src/components/: about_window.rs  drag_overlay.rs  image_thumbnail.blp  image_thumbnail.rs  mod.rs
src/models/: filetypes.rs
src/services/: exif.rs
src/traits/: mod.rs  view_host.rs
src/views/: mod.rs
src/views/about/: mod.rs
src/views/apply/: image_advanced_tab.blp  image_advanced_tab.rs  image_general_tab.blp  image_general_tab.rs  mod.blp  mod.rs
src/views/decrypt/: mod.blp  mod.rs
src/views/error/: mod.blp  mod.rs
