[package]
name = "decrypt-it"
version = "0.1.2"
edition = "2024"
rust-version = "1.93"
authors = ["Deimos Hall <deimoshall.dev@proton.me>"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = "0.22.5"
gtk = { version = "0.11.2", package = "gtk4", features = ["blueprint", "gnome_50"] }
gtk-macros = { version = "0.10", package = "gtk4-macros", features = [
    "blueprint",
] }
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_9"] }
log = "0.4"
once_cell = "1.21"
pretty_env_logger = "0.5"
itertools = "0.14"
tokio = { version = "1.49", features = ["process", "rt", "rt-multi-thread"] }
futures = "0.3"
ashpd = { version = "0.12" }
tempfile = "3.24"
regex = "1.12"
rand = "0.9"
shared_child = "1.1"
fdlimit = "0.3"
derivative = "2.2"
async-channel = "2.5"
exiftool = "0.3.1"
serde_json = "1.0.149"
dlc-decoder = "0.3.0"
